# MoMProduction

./: .gitignore  DFO_MoM.py  DFO_tool.py  DFO_tool_fix.py  GFMS_MoM.py  GFMS_tool.py  HWRF_MoM.py  HWRF_tool.py  MoM_run.py  README.md  VIIRS_tool.py  db_structure.py  environment.yml  initialize.py  on_boarding.md  on_boarding2.md  pyproject.toml  settings.py  setup.ps1  setup.sh  utilities.py
.github/workflows/: cron_VIIRS_ubuntu.yml  cron_all_jobs_ubuntu.yml  cron_jobs_ubuntu.yml  pr_check_cross_platform.yml  pr_check_ubuntu.yml  testrun_VIIRS_ubuntu.yml
data/profiling_data/: profile_wsl2_conda_VIIRS_AWS_optimized.json  profile_wsl2_conda_VIIRS_badinternet_noVRT.json  profile_wsl2_conda_VIIRS_goodinternet_VRT.json  resources_wsl2_conda_VIIRS_badinternet_VRT.txt  resources_wsl2_conda_VIIRS_badinternet_noVRT.txt
first_setup/: setup.ps1  setup.sh
monitor/: WEBSITE_MONITOR_README.md  monitor.py  website_monitor.py  website_monitor_config.cfg
processing_modules/dfo/: DFO_MoM.py  DFO_tool.py  DFO_tool_fix.py
processing_modules/gfms/: GFMS_MoM.py  GFMS_tool.py
processing_modules/hwrf/: HWRF_MoM.py  HWRF_tool.py
profiling_data/: profile_wsl2_conda_VIIRS_badinternet_VRT.json  profile_wsl2_conda_VIIRS_optimized.json  program_GFMS_win_20250211.prof  program_VIIRS_win.prof  resources_wsl2_GFMS_2025.txt  resources_wsl2_VIIRS.txt  resources_wsl2_conda_GFMS_2025.txt  resources_wsl2_conda_VIIRS.txt  resources_wsl2_conda_VIIRS_AWS_optimized.txt  resources_wsl2_conda_VIIRS_goodinternet_VRT.txt  resources_wsl2_conda_VIIRS_optimized.txt
(+39 files in other folders)
