[project]
name = "momproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fiona>=1.10.1",
    "geopandas>=1.1.2",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pandoc>=2.4",
    "py-spy>=0.4.1",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
]

[tool.setuptools]
packages = []
